Apply formatting to fix checkstyle warnings and optimize totient